--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 					<span class="search-input-placeholder">Поиск</span>
 				</div>
 				<div class="new-spot-input-container">
-					<input class="new-spot-input">
+					<input class="new-spot-input" placeholder="Екатеринбург">
 					<button class="new-spot-input-button create-button">Создать</button>
 				</div>
 				<header class="spots-header">
@@ -21,11 +21,11 @@
 					<button class="remove-button" title="Очистить список"></button>
 					<div class="spots-pills pills">
 						<div class="pill-active">
-							AAA
+							Все
 						</div><div class="pill">
-							BBB
+							Посетить
 						</div><div class="pill">
-							CCC
+							Посещенные
 						</div>
 					</div>
 				</header>
@@ -37,7 +37,7 @@
 						<input class="spot-desc-input" value="hasla" readonly>
 						<button class="accept-button hidden" title="Сохранить"></button>
 						<button class="decline-button hidden" title="Отменить"></button>
-						<div style="float: right">
+						<div class="spot-list-item-right">
 							<button class="up-button"></button>
 							<button class="down-button"></button>
 							<input type="checkbox" title="Пометить посещенным">
@@ -49,7 +49,7 @@
 							<input class="spot-desc-input-active" value="hasla">
 							<button class="accept-button" title="Сохранить"></button>
 							<button class="decline-button" title="Отменить"></button>
-							<div style="float: right">
+							<div class="spot-list-item-right">
 								<button class="up-button"></button>
 								<button class="down-button"></button>
 								<input type="checkbox" title="Пометить посещенным">
