--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,14 @@
 					<p class="spot-list-empty">Список пуст</p>
 					<ul class="spot-list">
 						<li class="spot-list-item">
-						<button class="edit-button" title="Изменить описание"></button>
-						<button class="remove-button" title="Удалить место"></button>
+						<button class="spot-edit edit-button" title="Изменить описание"></button>
+						<button class="spot-remove remove-button" title="Удалить место"></button>
 						<input class="spot-desc-input" value="hasla" readonly>
-						<button class="accept-button hidden" title="Сохранить"></button>
-						<button class="decline-button hidden" title="Отменить"></button>
+						<button class="spot-accept accept-button hidden" title="Сохранить"></button>
+						<button class="spot-decline decline-button hidden" title="Отменить"></button>
 						<div class="spot-list-item-right">
-							<button class="up-button"></button>
-							<button class="down-button"></button>
+							<button class="spot-up up-button"></button>
+							<button class="spot-down down-button"></button>
 							<input type="checkbox" title="Пометить посещенным">
 						</div>
 						</li>
