--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 			</footer>
 		</main>
 		
-		
+		<script src="public/utils.js"></script>
 		<script src="public/index.js"></script>
 	</body>
 </html>
