Сделал много чего, осталось свап реализовать

--- a/public/main.html
+++ b/public/main.html
@@ -20,9 +20,9 @@
                         <img src="/static/img/trash.jpg" id="places-list__trash-image" class="places-list__trash-image">
                     </div>
                     <div class="places-list__filters">
-                        <div class="places-list__filter places-list__filter__checked">Все</div>
-                        <div class="places-list__filter">Посетить</div>
-                        <div class="places-list__filter">Посещенные</div>
+                        <div class="places-list__filter places-list__filter__checked" id="places-list__filter-all">Все</div>
+                        <div class="places-list__filter" id="places-list__filter-not-visited">Посетить</div>
+                        <div class="places-list__filter" id="places-list__filter-visited">Посещенные</div>
                     </div>
                 </div>
                 <div class="places-list__list" id="places-list__list">
