--- a/index.html
+++ b/index.html
@@ -25,13 +25,23 @@
     </div>
     <main class="places">
         <article class="place">
+            <div class="controls">
+                <button class="controls__delete">
+                    Delete
+                </button>
+                <button class="controls__edit">
+                    Edit
+                </button>
+            </div>
             <div class="place__title">
                 Rome
             </div>
             <div class="arrows">
                 <span class="arrows__up">
-                </span>++
-                <span class="arrows__down">--
+                    ++
+                </span>
+                <span class="arrows__down">
+                    --
                 </span>
             </div>
             <input type="checkbox" class="place__visited" />
