--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" 
     integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" 
     crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/regular.js" 
+    integrity="sha384-t7yHmUlwFrLxHXNLstawVRBMeSLcXTbQ5hsd0ifzwGtN7ZF7RZ8ppM7Ldinuoiif" 
+    crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" 
     integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" 
     crossorigin="anonymous"></script>
@@ -45,7 +48,7 @@
                 </label>
             </div>
 
-            <div class="places_list"></div>
+            <div class="places__list"></div>
 
         </div>
 
