some style, moving places, cancel editing places

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <main>
     <input type="text" placeholder="Поиск" class="search-field">
     <form id="add-place" class="add-place">
-        <input class="add-place__name" type="text" placeholder="Добавить место">
+        <input class="add-place__name" type="text" placeholder="Добавить место" required>
         <input class="add-place__button" type="button" value="Создать">
     </form>
     <div class="places">
