--- a/public/main.html
+++ b/public/main.html
@@ -2,10 +2,10 @@
     <head>
         <title>Павел занят</title>
         <script src="/static/js/main.js" type="text/javascript"></script>
-        <link href="/static/css/main.css" rel="stylesheet"></style>
+        <link href="/static/css/index.css" rel="stylesheet"></style>
     </head>
     <body>
-        <main>
+        <main class="web-dev-task-3">
             <header class="search-place">
                 <input placeholder="🔎 Поиск..." class="search-place__input" id="search-place__input">
             </header>
