--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                 <ul class="filter-places__control">
                     <li data-filter="all" class="filter-places__button filter-places__button_border-radius_left filter-places__button_selected">Все</li>
                     <li data-filter="unvisited" class="filter-places__button">Посетить</li>
-                    <li data-filter="visited" class="filter-places__button filter-places__button_border-radius_right">Посещенные</li>
+                    <li data-filter="visited" class="filter-places__button filter-places__button_border-radius_right">Посещённые</li>
                 </ul>
             </div>
 
@@ -39,7 +39,7 @@
         </div>
         <div class="footer">
             <span class="footer__year">2018</span>
-            <span class="footer__contributor">whoe</span>
+            <span class="footer__contributor">@whoe</span>
         </div>
 
         <script src="js/ui.js"></script>
