--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="html" lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Павел слишком занят</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body>
+<body class="body">
     <div class="wrapper">
-        <input class="hidden" type="radio" name="visitFilter" id="all" onchange="changeVisitFilter()" checked>
-        <input class="hidden" type="radio" name="visitFilter" id="visit" onchange="changeVisitFilter()">
-        <input class="hidden" type="radio" name="visitFilter" id="visited" onchange="changeVisitFilter()">
         <div class="content">
             <header><h1 class="service-name">Сервис &laquo;Павел слишком занят&raquo;</h1></header>
-            <main>
-                <input id="search-string" class="search-notes" type="text" placeholder="Поиск">
+            <main class="main">
+                <input id="search-string" class="search-places input_size_m text-input_indents_m"
+                       type="text" placeholder="Поиск">
                 <div class="creating-place">
-                    <input id="place-name" class="creating-place__text-area" type="text" placeholder="Название места">
-                    <input class="creating-place__button" type="button" value="Создать" onclick="addNote()">
+                    <input id="name-added-place" class="creating-place__text-area input_size_m text-input_indents_m"
+                           type="text" placeholder="Название места">
+                    <input id="create-place" class="creating-place__button" type="button" value="Создать">
                 </div>
-                <div class="handlers">
-                    <span class="handlers__title">Места</span>
-                    <img class="handlers__clear" src="pictures/can.ico" alt="Удалить всё" onclick="clearNotes()">
-                    <table class="handlers__filter">
+                <div class="editors">
+                    <span class="editors__title">Места</span>
+                    <img id="cleaner-places" class="editors__clearing" src="pictures/can.ico" alt="Удалить всё">
+                    <table class="editors__filters">
                         <tr>
-                            <td><label for="all">Все</label></td>
-                            <td><label for="visit">Посетить</label></td>
-                            <td><label for="visited">Посещённые</label></td>
+                            <td class="visit-td">
+                                <input id="all" class="hidden input_size_m filters__checkbox_all"
+                                       type="radio" name="visit-filter" checked>
+                                <label class="visit-label" for="all">Все</label>
+                            </td>
+                            <td class="visit-td">
+                                <input id="visit" class="hidden input_size_m filters__checkbox_no-visit" type="radio"
+                                       name="visit-filter">
+                                <label class="visit-label" for="visit">Посетить</label>
+                            </td>
+                            <td class="visit-td">
+                                <input id="visited" class="hidden input_size_m filters__checkbox__visit" type="radio"
+                                       name="visit-filter">
+                                <label class="visit-label" for="visited">Посещённые</label>
+                            </td>
                         </tr>
                     </table>
-                    <hr class="handlers__filter-underline">
+                    <hr class="editors__underline">
                 </div>
                 <div class="places" id="places"></div>
             </main>
         </div>
-        <footer>
-            <div class="footer__about-service footer__about-service-left-part">© graf-m-96</div>
-            <div class="footer__about-service footer__about-service-right-part">2018</div>
+        <footer class="footer">
+            <div class="footer__about-service about-service__author">© graf-m-96</div>
+            <div class="footer__about-service about-service__date">2018</div>
         </footer>
     </div>
     <script src="dom.js"></script>
