split dom.js using webpack

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,6 @@
             <div class="footer__about-service about-service__date">2018</div>
         </footer>
     </div>
-    <script src="dom.js"></script>
+    <script src="./dom.js"></script>
 </body>
 </html>
