Исправлен механизм сравнения компонентов. Правильная работа индикатора при работе с сетью

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Всеобщий список мест</title>
 </head>
 <body>
 <div id="app-root"></div>
