spinner + request on the server when filtering

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         </main>
         <footer class="footer">
             <div class="footer__year">2018</div>
-            <div class="footer__copyright">© kvas</div>
+            <div class="footer__copyright">© akulin</div>
         </footer>
     </div>
 </body>
