--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Павел слишком занят</title>
 </head>
