--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,51 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>Павел слишком занят</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <div class="wrapper">
-            <label for="search">
-                <input type="text" placeholder="Поиск по названию" id="search" />
-            </label>
-            <div class="createItem">
-                <div>
-                    <input type="text" placeholder="Название" id="title" />
-                    <label>
-                        <input name="radioType" type="radio" value="0">
-                        Город
-                    </label>
-                    <label>
-                        <input name="radioType" type="radio" value="1">
-                        Страна
-                    </label>
-                    <label>
-                        <input name="radioType" type="radio" value="2">
-                        Достопримечательность
-                    </label>
-                </div>
-                <input id="createButton" type="button" value="Создать">
-            </div>
+            <input title="search" type="text" placeholder="Поиск по названию" class="searchInput" />
+            <form class="createItem">
+                <input title="name" type="text" placeholder="Название" class="titleInput" />
+                <input title="city" name="radioType" type="radio" value="0">
+                <span>Город</span>
+                <input title="country" name="radioType" type="radio" value="1">
+                <span>Страна</span>
+                <input title="sight" name="radioType" type="radio" value="2">
+                <span>Достопримечательность</span>
+
+                <button class="createButton" type="submit">Создать</button>
+            </form>
             <div class="caption">
                 <div>
                     <h2>Список мест</h2>
-                    <label>
-                        <input name="radioVisit" type="radio" value="0" checked>
-                        Все
-                    </label>
-                    <label>
-                        <input name="radioVisit" type="radio" value="1">
-                        Посетить
-                    </label>
-                    <label>
-                        <input name="radioVisit" type="radio" value="2">
-                        Посещенные
-                    </label>
+                    <input title="all" name="radioVisit" type="radio" value="0" checked>
+                    <span>Все</span>
+                    <input title="visit" name="radioVisit" type="radio" value="1">
+                    <span>Посетить</span>
+                    <input title="visited" name="radioVisit" type="radio" value="2">
+                    <span>Посещенные</span>
                 </div>
-                <input type="button" class="deleteAllButton" id="deleteAll" value="очистить">
+                <button class="deleteAllButton">очистить</button>
             </div>
             <div class="content"></div>
         </div>
-        <script type="text/javascript" src="bundle.js"></script>
+        <script type="text/javascript" src="./bundle.js"></script>
     </body>
 </html>
