createElement from html

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,21 @@
 			</footer>
 		</main>
 		
+		<div class="node-list">
+			<p class="spot-list-empty">Список пуст</p>
+			<ul class="spot-list"></ul>
+			<button class="spot-edit edit-button" title="Изменить описание"></button>
+			<button class="spot-remove remove-button" title="Удалить место"></button>
+			<button class="spot-accept accept-button hidden" title="Сохранить изменения"></button>
+			<button class="spot-decline decline-button hidden" title="Отменить изменения"></button>
+			<button class="spot-up up-button"></button>
+			<button class="spot-down down-button"></button>
+			<input class="spot-desc-input" readonly>
+			<input type="checkbox" title="Пометить посещенным">
+			<li class="spot-list-item"></li>
+			<div class="spot-list-item-right"></div>
+		</div>
+
 		<script src="public/utils.js"></script>
 		<script src="public/index.js"></script>
 	</body>
