--- a/public/index.html
+++ b/public/index.html
@@ -12,29 +12,15 @@
         <input type="search" class="header__search" placeholder="Поиск...">
     </header>
     <main class="main">
-        <form class="create">
-            <input type="text" class="create__input" placeholder="Название места...">
-            <button type="submit" class="create__btn">Создать</button>
+        <form class="create-form">
+            <input type="text" class="create-form__input" placeholder="Название места...">
+            <button type="submit" class="create-form__btn">Создать</button>
         </form>
         <section class="places">
             <header class="places__header">
                 <div class="places__wrapper">
                     <h2 class="places__heading">Места</h2>
-                    <button class="places__delete" title="Удалить все...">
-                        <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                            <g>
-                                <rect x="-1" y="-1" width="582" height="402" fill="none"/>
-                            </g>
-                            <g>
-                                <polygon class="st0" points="24.5 22.9 27.5 22.9 27.5 46.9 24.5 46.9"/>
-                                <polygon class="st0" points="30.5 22.9 33.5 22.9 33.5 46.9 30.5 46.9"/>
-                                <polygon class="st0" points="36.5 22.9 39.5 22.9 39.5 46.9 36.5 46.9"/>
-                                <polygon class="st0" points="12.5 13.9 51.5 13.9 51.5 16.9 12.5 16.9"/>
-                                <path class="st0" d="m39.4 15.4h-2.8v-3c0-0.9-0.7-1.6-1.6-1.6h-6c-0.9 0-1.6 0.7-1.6 1.6v3h-2.8v-3c0-2.4 2-4.4 4.4-4.4h6c2.4 0 4.4 2 4.4 4.4v3"/>
-                                <path class="st0" d="m41 55.9h-18c-2.4 0-4.5-2-4.7-4.4l-2.8-36 3-0.2 2.8 36c0.1 0.9 0.9 1.6 1.7 1.6h18c0.9 0 1.7-0.8 1.7-1.6l2.8-36 3 0.2-2.8 36c-0.2 2.5-2.3 4.4-4.7 4.4"/>
-                            </g>
-                        </svg>
-                    </button>
+                    <button class="places__delete" title="Удалить все..."></button>
                 </div>
                 <div class="places__sort-options">
                     <input type="radio" name="sort" value="all" id="opt-1" class="places__sort-option" checked>
