--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" 
         integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" 
         crossorigin="anonymous"></script>
-        <script src="model.js"></script>
+        <script defer src="model.js"></script>
     </head>
     <body>
         <main>
